python/slurm-24883543.out
  File "svm_testing.py", line 34
    
                                                        ^
SyntaxError: unexpected EOF while parsing
